@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Jul 26, 2009
+---------------------------------------------------------------------
+- Adding timezone support.
+
 Fri, Jul 24, 2009
 ---------------------------------------------------------------------
 - Fixed a typo that affected individual permissions (thanks, Guillermo!)
